Update: further refinements to advanced risk metrics and notebook code

--- a/notebooks/02_task2_strategy_build.ipynb
+++ b/notebooks/02_task2_strategy_build.ipynb
@@ -1795,7 +1795,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "2650cf28",
    "metadata": {},
    "outputs": [
@@ -1965,17 +1965,13 @@
     "    return excess.mean() / returns.std() * np.sqrt(periods_per_year)\n",
     "\n",
     "def beta(strategy_returns, benchmark_returns):\n",
-    "    # Drop NaNs and align indices\n",
     "    sr = strategy_returns.dropna()\n",
     "    br = benchmark_returns.dropna()\n",
-    "    # Intersect indices\n",
     "    common_idx = sr.index.intersection(br.index)\n",
     "    sr = sr.loc[common_idx]\n",
     "    br = br.loc[common_idx]\n",
-    "    # Ensure arrays are 1D and have at least 2 values\n",
     "    if sr.shape[0] < 2 or br.shape[0] < 2:\n",
     "        return np.nan\n",
-    "    # If all values are constant, covariance returns a float, so check for that\n",
     "    sr_arr = np.asarray(sr).reshape(-1)\n",
     "    br_arr = np.asarray(br).reshape(-1)\n",
     "    if np.all(sr_arr == sr_arr[0]) or np.all(br_arr == br_arr[0]):\n",
@@ -2007,7 +2003,6 @@
     "    peak_date = cum_returns[:trough_date].idxmax()\n",
     "    return min_dd, peak_date, trough_date\n",
     "\n",
-    "# Calculate cumulative returns for drawdown\n",
     "cum_portfolio = (1 + df['Portfolio_Return_Dec']).cumprod()\n",
     "cum_alsi = (1 + df['ALSI_Return_Dec']).cumprod()\n",
     "\n",
@@ -2015,12 +2010,11 @@
     "    'Annualized Return': [annualized_return(df['Portfolio_Return_Dec']), annualized_return(df['ALSI_Return_Dec'])],\n",
     "    'Annualized Volatility': [annualized_volatility(df['Portfolio_Return_Dec']), annualized_volatility(df['ALSI_Return_Dec'])],\n",
     "    'Sharpe Ratio': [sharpe_ratio(df['Portfolio_Return_Dec']), sharpe_ratio(df['ALSI_Return_Dec'])],\n",
-    "    #'Beta': [beta(df['Portfolio_Return_Dec'], df['ALSI_Return_Dec']), np.nan],\n",
+    "    'Beta': [beta(df['Portfolio_Return_Dec'], df['ALSI_Return_Dec']), np.nan],\n",
     "    'Upside Capture Ratio': [upside_capture(df['Portfolio_Return_Dec'], df['ALSI_Return_Dec']), np.nan],\n",
     "    'Downside Capture Ratio': [downside_capture(df['Portfolio_Return_Dec'], df['ALSI_Return_Dec']), np.nan],\n",
     "}\n",
     "\n",
-    "# Maximum drawdown and dates\n",
     "portfolio_dd, portfolio_peak, portfolio_trough = max_drawdown(cum_portfolio)\n",
     "alsi_dd, alsi_peak, alsi_trough = max_drawdown(cum_alsi)\n",
     "risk_stats['Maximum Drawdown'] = [portfolio_dd, alsi_dd]\n",
